<resources>
    <string name="app_name">Job Portal</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_industry_name">Enter Industry Name</string>
    <string name="enter_job_type_or_department">Enter Job Type or Department</string>
    <string name="enter_pay_amount">Enter Pay Amount</string>
    <string name="enter_job_discretion">Enter Job Discretion</string>
    <string name="enter_required_skill">Enter Required Skill</string>
    <string name="enter_who_can_apply">Enter Who can apply</string>
    <string name="post_job">Post Job</string>
    <string name="profile">profile</string>
    <string name="filter">filter</string>
    <string name="search">search</string>
    <string name="hintSearchMess">Search Job, Internship</string>
</resources>