<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".fragments.PostNewJobFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/eTxtCyName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#39AAAAAA"
                android:ems="10"
                android:drawableTint="@color/white"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/enter_industry_name"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <EditText
                android:id="@+id/eTxtType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#39AAAAAA"
                android:ems="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:hint="@string/enter_job_type_or_department"
                android:inputType="textPersonName"
                android:minHeight="50dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/eTxtPay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="#39AAAAAA"
                    android:drawableStart="@drawable/ruppes"
                    android:ems="10"
                    android:drawableTint="@color/white"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:hint="@string/enter_pay_amount"
                    android:inputType="number"
                    android:minHeight="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <EditText
                    android:id="@+id/eTxtTotalPost"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:background="#39AAAAAA"
                    android:ems="10"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:hint="Enter Total Posts"
                    android:inputType="number"
                    android:minHeight="50dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />
            </LinearLayout>


            <EditText
                android:id="@+id/eTxtDisc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#39AAAAAA"
                android:ems="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="start|center"
                android:hint="@string/enter_job_discretion"
                android:inputType="textMultiLine"
                android:minHeight="50dp" />

            <EditText
                android:id="@+id/eTxtSkill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#39AAAAAA"
                android:ems="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="start|center"
                android:hint="@string/enter_required_skill"
                android:inputType="textMultiLine"
                android:minHeight="50dp" />

            <EditText
                android:id="@+id/eTxtWCA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#39AAAAAA"
                android:ems="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:gravity="start|center"
                android:hint="@string/enter_who_can_apply"
                android:inputType="textMultiLine"
                android:minHeight="50dp" />

            <EditText
                android:id="@+id/eTxtWhNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#39AAAAAA"
                android:ems="10"
                android:hint="Enter Whatsapp No"
                android:inputType="phone"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:minHeight="50dp" />

            <Button
                android:id="@+id/btnPostJob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="40dp"
                android:padding="10dp"
                android:backgroundTint="#39AAAAAA"
                android:text="@string/post_job"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>